static/base.css
*{
    box-sizing: border-box;
    padding: 0;
    margin: 0;
}

body{
    display: flex;
    justify-content: center;
    align-items: center;
    height: 100vh;
    background-image: linear-gradient(to right top, #e31fec, #c415ee, #a014f0, #7319f1, #2121f2);
    color: #fff;
    font-family: sans-serif;
}

nav{
    position: absolute;
    top: 0;
    left:0;
    width: 100%;

    padding: 15px;
    background-color: rgba(0, 0, 0, 0.3);
    box-shadow: rgba(149, 157, 165, 0.2) 0 8px 24px;
}

nav a{
    margin-left: 10px;
    text-decoration: none;
    text-transform: uppercase;
    color: #fff;
    transition: 0.3s ease all;
}

h1{
    text-transform: uppercase;
}

.container{
    background-color: rgba(0, 0, 0, 0.3);
    box-shadow: rgba(0, 0, 0, 0.35) 0 5px 15px;
    padding: 30px 45px;

    display: flex;
    flex-direction: column;
    align-items: center;
}

.user-input{
    margin: 15px 0;
}


form{
    display: flex;
    flex-direction: column;
    align-items: center;
    width: 100%;
}

input{
    outline: none;
    border: none;
    padding: 5px 44px;
    width: 100%;
    background-color: transparent;
    border-bottom: 3px solid #ffffff;
    color: #fff;
    text-align: center;
    font-size: 18px;
}

input::-webkit-input-placeholder{
    text-transform: uppercase;
    color: rgba(255, 255, 255, 0.34);
    font-size: 14px;
}

form h1{
    margin: 8px 0;
}


form div{
    margin: 10px 0;
}

form label{
    font-size: 18px;
}

.button{
    border: none;
    border-bottom: 2px solid #fff;
    border-top: 2px solid #fff;
    padding: 7px 23px;
    outline: none;
    color: #fff;
    font-size: 15px;
    text-transform: uppercase;
    font-weight: bold;
    background-color: transparent;
}

.button:hover{
    cursor: pointer;
}

.link{
    align-self: flex-end;
    margin-right: 10px;
    font-size: 14px;
    color: #fff;
    text-decoration: none;
}

.link:hover{
    text-decoration: underline;
}

.guess p{
    margin-top: 12px;
}

table tr th{
    text-transform: uppercase;
    font-weight: bold;
    padding: 6px 12px;
    border-bottom: 1px solid #fff;
    letter-spacing: 1px;
}

table tr td{
    padding: 8px 12px;
    text-align: center;
    border-bottom: 1px solid #fff;
}

